k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-1
  labels:
    app: demo-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-1
  template:
    metadata:
      labels:
        app: demo-1
    spec:
      containers:
        - name: demo-1
          image: shikhara1022/demo-1:latest
          ports:
            - containerPort: 8080
